--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
+channels:
+    - conda-forge
 dependencies:
-  - pandas
-  - numpy
-  - yfinance
-  - plotly
- 
+    - pandas
+    - numpy
+    - yfinance
+    - plotly
